--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "js-sha256": "^0.11.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite": "^5.4.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -27,7 +29,6 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "globals": "^16.3.0"
   }
 }
